--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Quicksand', sans-serif;
-  background-color: #F3F5F7;
+  background-color: #f7f7f7;
 }
 
 a {
