--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
+
 body {
   padding: 0;
   margin: 0;
   font-family: 'Quicksand', sans-serif;
   background-color: #f7f7f7;
+  width: 100vw;
 }
 
 a {
@@ -19,7 +20,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -27,4 +28,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
