--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,3 +75,11 @@ a {
     box-shadow: inset 0px 0px 0px 30px #CA3011;
   }
 }
+
+
+/* working on the iframe styles  */
+/* #website_frame{
+  outline: 2px solid red;
+  position: relative;
+} */
+
