--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,10 @@ body {
   width: 100vw;
 }
 
+::selection {
+  background-color: #ca301135;
+}
+
 a {
   color: inherit;
   text-decoration: none;
